# idemainwindow

./: CMakeLists.txt  qiproject.xml
app/: CMakeLists.txt  main.cpp  my_ide_mainwindow.cpp  my_ide_mainwindow.hpp
app/controller/: editors_controller.cpp  editors_controller.hpp  side_panel_controller.cpp  side_panel_controller.hpp
app/dummy_content/: dummy_closable_widget_element.cpp  dummy_closable_widget_element.hpp
app/idemainwindow/: bottom_panel.cpp  bottom_panel.hpp  editors_area.cpp  editors_area.hpp  ide_mainwindow.cpp  ide_mainwindow.hpp  side_panel.cpp  side_panel.hpp  side_panel_item.cpp  side_panel_item.hpp
lib/: CMakeLists.txt
lib/editor/: CMakeLists.txt
lib/editor/editor/: editor.hpp  editor_interface.hpp  editor_widget.hpp  editor_widget_interface.hpp
lib/editor/src/: editor.cpp  editor_interface.cpp  editor_widget.cpp
lib/ide_widget/: CMakeLists.txt
lib/ide_widget/ide_widget/: api.hpp  closable_widget.hpp  closable_widget_element.hpp  closable_widget_event.hpp  enum.hpp  ide_mainwindow.hpp  open_file_chooser.hpp  open_file_chooser_model.hpp  recursive_splitter.hpp  splitter.hpp  widget_chooser.hpp  widget_chooser_model.hpp
lib/ide_widget/ide_widget/bottom_panel/: bottom_panel.hpp  bottom_panel_chooser.hpp
lib/ide_widget/ide_widget/commun/: closable_widget.hpp  closable_widget_element.hpp  closable_widget_event.hpp  splitter.hpp
lib/ide_widget/ide_widget/editor/: editor_interface.hpp  editor_widget.hpp  editor_widget_interface.hpp  open_file_chooser.hpp  open_file_chooser_model.hpp  recursive_splitter.hpp
lib/ide_widget/ide_widget/side_panel/: side_panel.hpp  widget_chooser.hpp  widget_chooser_model.hpp
lib/ide_widget/res/: icons.qrc
lib/ide_widget/src/: closable_widget.cpp  closable_widget_element.cpp  closable_widget_event.cpp  ide_mainwindow.cpp  open_file_chooser.cpp  open_file_chooser_model.cpp  recursive_splitter.cpp  splitter.cpp  widget_chooser.cpp  widget_chooser_model.cpp
lib/ide_widget/src/bottom_panel/: bottom_panel.cpp  bottom_panel_chooser.cpp
lib/ide_widget/src/commun/: closable_widget.cpp  closable_widget_element.cpp  closable_widget_event.cpp  splitter.cpp
lib/ide_widget/src/editor/: editor_interface.cpp  editor_widget.cpp  open_file_chooser.cpp  open_file_chooser_model.cpp  recursive_splitter.cpp
lib/ide_widget/src/side_panel/: side_panel.cpp  widget_chooser.cpp  widget_chooser_model.cpp
lib/panel_widget/: CMakeLists.txt
lib/panel_widget/panel_widget/: panel_widget.hpp
lib/panel_widget/src/: panel_widget.cpp
lib/splittable_area/: CMakeLists.txt
lib/splittable_area/splittable_area/: splitter_area.hpp  splitter_enum.hpp  splitter_event.hpp  splitter_handler.hpp  splitter_widget.hpp  splitter_widget_base.hpp  widget_focus_watcher.hpp
lib/splittable_area/src/: splitter_area.cpp  splitter_event.cpp  splitter_handler.cpp  splitter_widget.cpp  splitter_widget_base.cpp  widget_focus_watcher.cpp
lib/splittable_area/test/: main.cpp  main_window.cpp  main_window.hpp
